# lcx

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
lib/libsocks/: output-util.c  output-util.h
src/: LcxConfig.h.in  config.h  lcx.c  lcx.h  main.c  netcat.c  socket.h  socks.c  unisocket.h
test/: code_in_c.c  code_in_c.h  test.cpp
